# Pr-ticaPOOtest

./: README.md
repotest/: pyproject.toml
repotest/mini_biblioteca/: pyproject.toml
repotest/mini_biblioteca/src/mini_biblioteca/: emprestimos.py  livro.py  main.py  usuarios.py
